# noxpy

./: .gitignore  README.md  nox.py  pyproject.toml
src/noxpy/: __init__.py  nox.py
